[project]
name = "sandbox-rye"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "contour-gara", email = "65527071+contour-gara@users.noreply.github.com" }
]
dependencies = [
    "black>=23.12.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "sandbox_rye:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sandbox_rye"]
